# kinect-lcm

./: CMakeLists.txt
.svn/: wc.db
src/kinect-lcm/: CMakeLists.txt
src/kinect-openni-lcm/: CMakeLists.txt  kinectOpenniLCM.h  main.cpp
src/kinect-utils/: CMakeLists.txt  kinect-pc.cpp  kinect-pointcloud-pub.h
src/tools/: rgb_tool.cpp
